cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(TULIP REQUIRED)

INCLUDE_DIRECTORIES(${TULIP_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})

set(PLUGIN_NAME "NoiseToLayout-${TULIP_VERSION}")

set(CMAKE_CXX_FLAGS "-Wall")
set(CMAKE_C_FLAGS "-Wall")

ADD_LIBRARY(${PLUGIN_NAME} SHARED NoiseToLayout.cpp)
TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${TULIP_LIBRARIES})

INSTALL(TARGETS ${PLUGIN_NAME} LIBRARY DESTINATION ${TULIP_PLUGINS_DIR})
